--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,9 +29,9 @@
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         <a class="github-button" href="https://github.com/crweiner/hacktoberfest-swag-list/subscription" data-icon="octicon-eye" data-show-count="true" aria-label="Watch crweiner/hacktoberfest-swag-list on GitHub">Watch</a>
         <a class="github-button" href="https://github.com/crweiner/hacktoberfest-swag-list/fork" data-icon="octicon-repo-forked" data-show-count="true" aria-label="Fork crweiner/hacktoberfest-swag-list on GitHub">Fork</a>
-        <p>
+        <p><strong>
           This website is a fan and community made creation. It is not directly affiliated with <a href="https://hacktoberfest.digitalocean.com/">Hacktoberfest</a> or any sponsoring company.
-        </p>
+          </strong></p>
         {% endif %}
 
         {% if site.github.is_user_page %}
