--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
         <a class="github-button" href="https://github.com/crweiner/hacktoberfest-swag-list/subscription" data-icon="octicon-eye" data-show-count="true" aria-label="Watch crweiner/hacktoberfest-swag-list on GitHub">Watch</a>
         <a class="github-button" href="https://github.com/crweiner/hacktoberfest-swag-list/fork" data-icon="octicon-repo-forked" data-show-count="true" aria-label="Fork crweiner/hacktoberfest-swag-list on GitHub">Fork</a>
         <p><strong>
-          This website is a fan and community made creation. It is not directly affiliated with <a href="https://hacktoberfest.digitalocean.com/">Hacktoberfest</a> or any sponsoring company.
+          Disclaimer: This website is a fan and community made creation. It is not affiliated with <a href="https://hacktoberfest.digitalocean.com/">Hacktoberfest</a> or any company offering swag.
           </strong></p>
         {% endif %}
 
