--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         <a class="github-button" href="https://github.com/crweiner/hacktoberfest-swag-list/subscription" data-icon="octicon-eye" data-show-count="true" aria-label="Watch crweiner/hacktoberfest-swag-list on GitHub">Watch</a>
         <a class="github-button" href="https://github.com/crweiner/hacktoberfest-swag-list/fork" data-icon="octicon-repo-forked" data-show-count="true" aria-label="Fork crweiner/hacktoberfest-swag-list on GitHub">Fork</a>
+        <a class="github-button" href="https://github.com/crweiner/hacktoberfest-swag-list" data-icon="octicon-star" data-show-count="true" aria-label="Star crweiner/hacktoberfest-swag-list on GitHub">Star</a>
         <p><strong>
           Disclaimer: This website is a fan and community made creation. It is not affiliated with <a href="https://hacktoberfest.digitalocean.com/">Hacktoberfest</a> or any company offering swag.
           </strong></p>
