Fixes default.html
Added "Scroll to top" in the {{content}}

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,6 +52,7 @@
       <footer>
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+        <div class= "c-top" data-icon='ei-chevron-up' data-size='s' title="Scroll to top"></div><!--/.ctop-->
         {% endif %}
         <p><small>Hosted on GitHub Pages and Netlify &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
