--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,11 +58,13 @@
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
     <script src="{{ "/assets/js/vanilla-back-to-top.min.js" | relative_url }}"></script>
-    <script>addBackToTop({
-      diameter: 56,
-      backgroundColor: 'rgb(0, 0, 0)',
-      textColor: '#fff'
-    })</script>
+    <script>
+      addBackToTop({
+        diameter: 56,
+        backgroundColor: 'rgb(161, 30, 198)',
+        textColor: '#fff'
+      });
+    </script>
     {% if site.google_analytics %}
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
