--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,9 +3,9 @@
 
 @import "jekyll-theme-minimal";
 
-@media screen and (max-height: 715px) {
+@media screen and (max-height: 645px) {
   footer {
-    position: static;
+    position: plex;
     width: 100%;
   }
 }
