--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,13 @@
 
 @import "jekyll-theme-minimal";
 
+footer {
+  text-align: right;
+}
+.view{
+  margin-top: -15px;
+}
+
 @media screen and (max-height: 715px) {
   footer {
     position: static;
